      union(query1, query2), select([foo]).select_from(query), 
      etc.

    - Query.join() can now construct multiple FROM clauses, if 
      needed.  Such as, query(A, B).join(A.x).join(B.y)
      might say SELECT A.*, B.* FROM A JOIN X, B JOIN Y.  
      Eager loading can also tack its joins onto those 
      multiple FROM clauses.  [ticket:1337]
      
    - Fixed bug where column_prefix wasn't being checked before
      not mapping an attribute that already had class-level 
      name present.

    - a session.expire() on a particular collection attribute
      will clear any pending backref additions as well, so that
      the next access correctly returns only what was present
      in the database.  Presents some degree of a workaround for 
      [ticket:1315], although we are considering removing the 
      flush([objects]) feature altogether.
    
    - Session.scalar() now converts raw SQL strings to text()
      the same way Session.execute() does and accepts same 
      alternative **kw args.
      
    - improvements to the "determine direction" logic of 
      relation() such that the direction of tricky situations 
      like mapper(A.join(B)) -> relation-> mapper(B) can be
      determined.
      
    - When flushing partial sets of objects using session.flush([somelist]),
      pending objects which remain pending after the operation won't
      inadvertently be added as persistent. [ticket:1306]
     
    - Added "post_configure_attribute" method to InstrumentationManager,
      so that the "listen_for_events.py" example works again.
      [ticket:1314]
    
    - a forward and complementing backwards reference which are both
      of the same direction, i.e. ONETOMANY or MANYTOONE, 
      is now detected, and an error message is raised.   
      Saves crazy CircularDependencyErrors later on.
        
    - Fixed bugs in Query regarding simultaneous selection of 
      multiple joined-table inheritance entities with common base 
      classes: